@@ -1,3 +1,9 @@
+Mon Oct  9 14:28:56 CEST 2000 Daniel Veillard <Daniel.Veillard@w3.org>
+
+	* moved xml-error.h to xmlerror.h: seems this allowed to bypass
+	  the automake bug where wrong dependancies were generated.
+	* xpath.[ch]: worked on XPointer
+
 Fri Oct  6 12:58:04 CEST 2000 Daniel Veillard <Daniel.Veillard@w3.org>
 
 	* configure.in Makefile.am: 2.2.5, ship the include in an
